# Mirte

./: colcon_defaults.yaml
install/: local_setup.sh  setup.sh
install/mirte_bringup/share/mirte_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mirte_fastdds_discovery_setup/share/mirte_fastdds_discovery_setup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mirte_master_description/share/mirte_master_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mirte_moveit_config/share/mirte_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  (+4 more)
log/: latest_build
src/: mirte-ros-packages
src/intro_cognitive_architectures-main/: README.md  install.sh  package.xml  setup.cfg  setup.py
src/intro_cognitive_architectures-main/cognitive_nav/: goal_manager_node.py  knowledge_management_node.py  object_nav_node.py  ontology.py  reactive_approach_node.py  symbolic_node.py
src/intro_cognitive_architectures-main/exercises/: exercise1.md  exercise2.md  exercise3.md
src/intro_cognitive_architectures-main/launch/: mirte_house.launch.py
src/intro_cognitive_architectures-main/solutions/: sol1_ontology.py  sol3_goal_manager_node.py
src/log/: latest_list  latest_mixin
(+711 files in other folders)
